olsun artik su event

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
    <!-- Navbar  -->
 
-   
-
    <nav class="navbar">
     <img src="./img/indir.png" class="navbar-logo"  alt="">
 
@@ -42,7 +40,7 @@
 
         <section class="events">
             <div class="events-title">
-              <h1>Yaklaşan Etkinlikler</h1>
+              <h1>Upcoming Events</h1>
               <div class="line"></div>
             </div>
       
@@ -55,18 +53,18 @@
                   debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
                   dolor.
                 </p>
-                <a href="" class="btn">Daha Fazla</a>
+                <a href="" class="btn">More</a>
               </div>
       
               <div class="events-row-col">
                 <img src="./img/img2.png" alt="" />
-                <h4>Tatil Yürüyüşü</h4>
+                <h4>Everest Camp</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
                   debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
                   dolor.
                 </p>
-                <a href="" class="btn">Daha Fazla</a>
+                <a href="" class="btn">More</a>
               </div>
             </div>
           </section>
