--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <p class="copyright ">Copyright 2020 Outdoor Adventure</p>
          </footer>
     
+         <script src="./main.js"></script>
     
 </body>
 </html>
